--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,10 @@ body {
   text-align: center;
 }
 h1 {
-  /* margin-top: 0px; */
+  margin: 50px auto 0 auto;
   /* position: relative;
   top: 20px; */
+  font-size: 5rem;
   margin: 0 auto 0 auto;
   font-family: "Indie Flower", cursive;
 }
@@ -43,4 +44,7 @@ p {
 }
 h3 {
   font-family: "Unbounded", cursive;
+}
+h2 {
+  font-size: 2.5rem;
 }
