--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,9 @@ body {
 }
 h1 {
   margin: 50px auto 0 auto;
-  /* position: relative;
-  top: 20px; */
+  /* position: relative;*/
+  color: #66bfbf;
+  font-weight: normal;
   font-size: 5rem;
   margin: 0 auto 0 auto;
   font-family: "Indie Flower", cursive;
@@ -47,4 +48,6 @@ h3 {
 }
 h2 {
   font-size: 2.5rem;
+  color: #66bfbf;
+  font-weight: normal;
 }
