--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,8 @@ p {
 .pic-1 {
   border-radius: 100%;
   float: left;
+  margin-left: 50%;
+  position: relative;
   clear: both;
   padding: 30px;
 }
