--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,6 @@ p {
 .pic-1 {
   border-radius: 100%;
   float: left;
-
   clear: both;
   padding: 30px;
 }
@@ -78,14 +77,17 @@ h2 {
 }
 .intro {
   text-align: center;
+  width: 30%;
+  margin: auto;
   color: #40514e;
 }
 hr {
   border-top: dotted 10px;
   border-color: #eaf6f6;
-  border-bottom: 0px;
-  border-left: 0px;
+  border-bottom: none;
+  border-left: none;
   width: 5%;
+  margin: 100px auto;
 }
 .btn {
   background: #3498db;
@@ -127,4 +129,5 @@ hr {
 }
 .end-text {
   color: #eaf6f6;
+  border: 10px;
 }
